Source/JavaScriptCore/runtime/OptionsList.h
@@ -421,6 +421,7 @@ constexpr bool enableWebAssemblyStreamingApi = false;
     v(Bool, useB3TailDup, true, Normal, nullptr) \
     v(Unsigned, maxB3TailDupBlockSize, 3, Normal, nullptr) \
     v(Unsigned, maxB3TailDupBlockSuccessors, 3, Normal, nullptr) \
+    v(Bool, useB3HoistLoopInvariantValues, false, Normal, nullptr) \
     \
     v(Bool, useDollarVM, false, Restricted, "installs the $vm debugging tool in global objects") \
     v(OptionString, functionOverrides, nullptr, Restricted, "file with debugging overrides for function bodies") \
